# acband-laughlin-instability

./: .gitignore  K_func_test.ipynb  Liang_Fu_reprod.py  Manifest.toml  Project.toml  README.md  acband_test.ipynb  brillouin_zones.py  bz_test.ipynb  cmp.ipynb  cross.ipynb  fermion_test.ipynb  hole_dispersion.ipynb  interaction_matrix_test.ipynb  julia_main.ipynb  main.ipynb  main.py  netket_test.ipynb  pairing_gap_function.ipynb  pairing_gap_function.py  plot_spectrum.ipynb  pyproject.toml  scan_m_5.sh  scan_m_7.sh  scan_sigma_21_7.py  scan_sigma_21_7.sh  scan_sigma_21_7_0.sh  scan_sigma_21_7_1.sh  scan_sigma_3_0.sh  scan_sigma_3_1.sh  scan_sigma_3_dual_cpu.sh  solenoid_hole_dispersion.py  sparse_matrix_construction_test.ipynb
figs/: main.py  pyproject.toml
julia_ref/: code_00_Lattice.jl  code_01_FiniteLattice.jl  code_02_FormFactors.jl  code_03_QuantumGeometry.jl  code_10_InteractionMatrix.jl  code_11_ScanMagnetism.jl  code_20_ManyBodyHamiltonian.jl  code_21_Diagonalization.jl  code_22_PairingSymmetry.jl  code_23_SpectralFlow.jl  code_24_ODLRO.jl
runners/: run_sims.sh  scan_m_3.sh  scan_m_5.sh  scan_m_7.sh
src/: acband.py  netket_compat.py
src/qm_utils/: config.py
src/qm_utils/fermion/: fermion_utils.py  fermionic_fock.py  fermions_on_bz.py  operator.py
src/qm_utils/lattice/: brillouin_zone.py  lattice.py  supercell.py
src/qm_utils/lattice/sublattice/: utils.py
src/qm_utils/sec_quant/: netket_compat.py
tests/: K_func_test.ipynb  bz_test.ipynb  interaction_matrix_test.ipynb
