[project]
name = "acband-laughlin-instability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "jax>=0.8.0",
    "joblib>=1.5.2",
    "juliacall>=0.9.28",
    "matplotlib>=3.10.7",
    "netket>=3.20.3",
    "numba>=0.62.1",
    "threadpoolctl>=3.6.0",
]
